Fix footer on Safari

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -1,21 +1,3 @@
-body {
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  padding: 0;
-  margin: 0;
-}
-
-main {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-}
-
 .bg-brown {
   background-color: #9d7f52;
 }
