--- a/assets/css/svg.css
+++ b/assets/css/svg.css
@@ -1,3 +1,21 @@
+body {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 0;
+  margin: 0;
+}
+
+main {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+
 #svg-container {
   flex-grow: 1;
   overflow: hidden;
